--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <nav>
-        <a href="/login">login/singup</a>
+        <ul>
+            <li id="aSingup"><a href="/login">singup</a></li>
+            <li id="aLogin"><a href="/login">login</a></li>
+        </ul>
     </nav>
+    <script src="jwt.js"></script>
 </body>
 </html>
