--- a/public/sesion/createAccount.html
+++ b/public/sesion/createAccount.html
@@ -20,7 +20,7 @@
         <label for="user">usuario:</label>
         <input type="text" name="user">
         <label for="user">contraseña:</label>
-        <input type="text" name="password">
+        <input type="password" name="password">
         <button type="submit">enviar</button>
     </form>
 </body>
