--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -11,5 +11,6 @@
     <div id="urlsContainer">
     </div>
     <script src="dashboard.js"></script>
+    <script src="https://kit.fontawesome.com/3af50be71a.js" crossorigin="anonymous"></script>
 </body>
 </html>
