css dashboard || errores comunes

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -5,12 +5,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../../style.css">
 </head>
 <body>
-
+    <nav>
+        <h1>tittle</h1>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li id="aLogin"><a href="/login">Login</a></li>
+        </ul>
+    </nav>
     <div id="urlsContainer">
     </div>
     <script src="dashboard.js"></script>
+    <script src="../../jwt.js"></script>
     <script src="https://kit.fontawesome.com/3af50be71a.js" crossorigin="anonymous"></script>
 </body>
 </html>
