--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <nav>
+        <h1>tittle</h1>
         <ul>
-            <li id="aSingup"><a href="/login">singup</a></li>
-            <li id="aLogin"><a href="/login">login</a></li>
+            <li><a href="/dashboard">Dashboard</a></li>
+            <li id="aLogin"><a href="/login">Login</a></li>
         </ul>
     </nav>
     <script src="jwt.js"></script>
