css & js dashboard

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -16,6 +16,7 @@
         </ul>
     </nav>
     <div id="urlsContainer">
+        <div id="loading"></div>
     </div>
     <script src="dashboard.js"></script>
     <script src="../../jwt.js"></script>
