--- a/public/sesion/createAccount.html
+++ b/public/sesion/createAccount.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/sesion/createAccount.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
+    <nav>
+        <h1>tittle</h1>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li id="aLogin"><a href="/login">Login</a></li>
+        </ul>
+    </nav>
     <form action="/singup" method="post">
         <h2>crear cuenta</h2>
         <label for="user">usuario:</label>
