--- a/public/sesion/createAccount.html
+++ b/public/sesion/createAccount.html
@@ -23,7 +23,7 @@
         <input type="text" name="password">
         <button type="submit">enviar</button>
     </form>
-    <form action="/login" method="post">
+    <form action="/api/login" method="post">
         <h2>Iniciar sesion</h2>
         <label for="user">usuario:</label>
         <input type="text" name="user">
